# TOHMIN

./: .dockerignore  Dockerfile  README.md  pyproject.toml
src/: app.py  setting.py
src/analysis/: categorizer.py  filer.py
src/static/: layout.css  parameters_format.csv
src/templates/: analysis.html  base.html  data_upload.html  errors.html  instructions.html  params_input.html  params_upload.html  top.html  updates.html  visualization.html
