[tool.poetry]
name = "TOHMIN"
version = "0.1.0"
description = ""
authors = ["Yutaro Shimoyama"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pandas = "<3.0"
flask = "^3.0.1"
plotly = "5.20.0"
kaleido = "0.2.1"

[tool.poetry.dev-dependencies]
mypy = "^0.971"
black = "^23.3.0"
isort = "^5.10.1"

[tool.poetry.group.dev.dependencies]
pyproject-flake8 = "^7.0.0"

[tool.mypy]
show_error_context = true
show_column_numbers = true
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88
import_heading_stdlib      = "Standard Library"
import_heading_thirdparty  = "Third Party Library"
import_heading_firstparty  = "First Party Library"
import_heading_localfolder = "Local Library"
multi_line_output = 3
include_trailing_comma = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E302", "W503"]
exclude = [".venv", ".git", "__pycache__", ".vscode"]
max-complexity = 10

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"